project/stage/tests/accept/empty_functions/w_params/single_param/string_func_void_param.ul
string f12345098_234fXx_ (void UPPERCASE) { }
