project/stage/tests/reject/bad_print_statements/before_var_decl.ul
void main() {
    print 'c';
    void late;
}
